--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&family=Shadows+Into+Light&display=swap"
         rel="stylesheet">
-    <title>Hacker Universe</title>
+    <title>hello kitty</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     </section>
 
     <section class="categoria">
-        <h2>Hacking Songs</h2>
+        <h2>1º temporada</h2>
         <div class="categoria-videos">
             <a href="https://youtu.be/C55zjPlqdYw">
                 <img src="https://img.youtube.com/vi/C55zjPlqdYw/maxresdefault.jpg" />
@@ -53,7 +53,7 @@
         </div>
     </section>
     <footer class="copyright">
-        Hacker Universe 2024®
+        hello kitty 2025
     </footer>
     <script src="script.js"></script>
 </body>
