--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&family=Shadows+Into+Light&display=swap"
         rel="stylesheet">
-    <title>hello kitty</title>
+    <title>netkitty</title>
 </head>
 
 <body>
     <header>
         <div class="typewriter">
-            <span class="text">Hacker Universe</span><span class="cursor">_</span>
+            <span class="text">hello kitty</span><span class="cursor">_</span>
         </div>
         <div class="background"><span></span></div>
     </header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>How to hack</h1>
+            <h1>1º temporada</h1>
             <p>#h4x0r</p>
         </div>
 
@@ -33,7 +33,7 @@
     </section>
 
     <section class="categoria">
-        <h2>1º temporada</h2>
+        <h2>outros episódios</h2>
         <div class="categoria-videos">
             <a href="https://youtu.be/C55zjPlqdYw">
                 <img src="https://img.youtube.com/vi/C55zjPlqdYw/maxresdefault.jpg" />
