--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>1º temporada</h1>
-            <p>#h4x0r</p>
+            <p>1ºEP</p>
         </div>
 
         <div class="video">
