--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/GPQhIrp1AJ4?si=bp5AiYKIXFu_cbeS"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=COJE8fr7WjE&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
