--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="categoria">
         <h2>outros episódios</h2>
         <div class="categoria-videos">
-            <a href="https://youtu.be/C55zjPlqdYw">
+            <a href="https://www.youtube.com/watch?v=CDaPFgkcMGw&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=2">
                 <img src="https://img.youtube.com/vi/C55zjPlqdYw/maxresdefault.jpg" />
             </a>
             <a href="https://youtu.be/s9-yUNiq4KI">
