--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>outros episódios</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=CDaPFgkcMGw&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=2">
-                <img src="https://www.youtube.com/watch?v=CDaPFgkcMGw&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=2" />
+                <img src="https://pin.it/1v9KdMLaK" />
             </a>
             <a href="https://youtu.be/s9-yUNiq4KI">
                 <img src="https://img.youtube.com/vi/s9-yUNiq4KI/maxresdefault.jpg" />
