--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="https://www.youtube.com/watch?v=CDaPFgkcMGw&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=2">
                 <img src="https://youtu.be/CDaPFgkcMGw?si=gmXANGmwNK1037Hj" />
             </a>
-            <a href="https://youtu.be/s9-yUNiq4KI">
+            <a href="https://www.youtube.com/watch?v=0pSYMTySMn0&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=3">
                 <img src="https://img.youtube.com/vi/s9-yUNiq4KI/maxresdefault.jpg" />
             </a>
             <a href="https://youtu.be/Q8JIO106JlM">
