--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="video">
-            <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/COJE8fr7WjE?si=u_YpPpnRXWkPHbfM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/COJE8fr7WjE?si=6QtcmTTVtMeihsbj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
