--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section class="categoria">
         <h2>outros episódios</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=CDaPFgkcMGw&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=2">
-                <img src="https://img.youtube.com/CDaPFgkcMGw?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&t=10/maxresdefault.jpg" />
+            <a href="https://youtu.be/CDaPFgkcMGw?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n">
+                <img src="https://img.youtube.com/vi/CDaPFgkcMGw?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=0pSYMTySMn0&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=3">
                 <img src="https://img.youtube.com/vi/s9-yUNiq4KI/maxresdefault.jpg" />
