--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>outros episódios</h2>
         <div class="categoria-videos">
             <a href="https://youtu.be/CDaPFgkcMGw?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n">
-                <img src="https://img.youtube.com/vi/CDaPFgkcMGw?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n/maxresdefault.jpg" />
+                <img src="https://img.youtube.com/vi/CDaPFgkcMGw/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=0pSYMTySMn0&list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n&index=3">
                 <img src="https://img.youtube.com/vi/s9-yUNiq4KI/maxresdefault.jpg" />
