--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <a href="https://youtu.be/BYSDBDUokYw?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n">
                 <img src="https://img.youtube.com/vi/BYSDBDUokYw/maxresdefault.jpg" />
             </a>
-            <a href="https://youtu.be/BYSDBDUokYw?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n">
-                <img src="https://img.youtube.com/vi/WWICzLmJ8Y0/maxresdefault.jpg" />
+            <a href="https://youtu.be/D9VVsbVbw_k?list=PLuM1cDb0L3BKQ61alo0p2Q4YUEwkQFl2n">
+                <img src="https://img.youtube.com/vi/D9VVsbVbw_k/maxresdefault.jpg" />
             </a>
         </div>
     </section>
